--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,97 +258,111 @@ footer{
     justify-content: center;
     align-items: center;
 }
+a {
+    text-decoration: none;
+}
 /* FOOTER */
 
 /* INICIAL */
 main{}
+
 p {
     color: var(--cinza-claro);
+    font-size: 20px;
 }
-
 .secaoCursos {
     background-color: var(--branco);
-    display: grid;
-    justify-items: center;
-    margin-top: 80px;
+    width: 100vw;
+    height: auto;
+    font-family: var(--todo-site);
+}
+
+.secaoCursos article {
+    width: 100%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .secaoCursos img {
     width: 100px;
     height: 100px;
-}
-
-.secaoCursos article {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.secaoCursos ul {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 30px;
-    justify-content: space-between;
+    margin-top: 40px;
 }
 
 .secaoCursos li {
-   
-    gap: 10px;
-    display: grid;
-    justify-items: center;
-    width: 25%;
-}
-
-article p {
-    padding: 50px;
-}
-.secaoCalendar {
-    display: grid;
-    justify-items: center;
-}
-.secaoCalendar .calendario{
     display: flex;
-    gap: 30px;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    width: 100%;
+    height: auto;
+    margin: auto;
+}      
+
+li h3 {
+    font-weight: 100;
 }
 
-.calendario li  {
-    border: 2px solid;
-    display: grid;
+.secaoCalendar{
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    width: 100vw;
+    height: auto;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.secaoCalendar ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: nowrap;
+    gap: 50px;
+}
+
+.calendario li {
+    border: 2px solid;
+    width: 300px;
+    height: 450px;
+    display: grid;
     justify-items: center;
-    width: 250px;
-    height: 425px;
+    margin: auto;
+    
 }
 
 .calendario-data {
     background: var(--azul-escuro);
     font-size: var(--botao-signup-calendario);
     width: 100%;
-    height: 100%;
+    height: 125px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    color: var(--branco);
+    color: var(--branco);   
 }
 
 .calendario-data-rodape {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: var(--botao-signup-calendario);
+    font-size: 15px;
 }
 
 .calendario-data-rodape button{
-    font-size: var(--botao-signup-calendario);
+    
     background-color: var(--azul-claro);
     color: var(--branco);
     border: 0;
-    font-size: 15px;
+    
     padding: 10px;
     border-radius: 5px 5px;
     
@@ -379,6 +393,7 @@ article div.flex-col h2{
     margin: 30px 0px;
     font-size: 21x;
 }
+
 article div.flex-col p{
     font-size: 21px;
 }
@@ -413,6 +428,6 @@ article div.flex-col ul{
 }
 article div.flex-col ul li{
     margin: 10px 0px;
-}
+} 
     }
 /* MEDIA QUERIES */
